--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -1,69 +1,87 @@
 name: Website Deployment
+
 on:
   push:
     branches:
       - main
+
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v3
+
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
         with:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
+
       - name: Lint code
         run: npm run lint
+
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v3
+
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
         with:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
+
       - name: Test code
         id: run-tests
         run: npm run test
+
       - name: Upload test report
-        if: failure() && steps.run-tests.outcome =='failure'
+        if: failure()
         uses: actions/upload-artifact@v3
         with:
           name: test-report
           path: test.json
+
   build:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v3
+
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
         with:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
+
+      - name: Build website
         id: build-website
         run: npm run build
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
           path: dist
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -72,16 +90,32 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist-files
-      - name: Output contents
-        run: ls
-      - name: Deploy
-        run: echo "Deploying..."
+
+      - name: Move artifacts
+        run: mv dist-files/* .
+
+      - name: List files for verification
+        run: ls -la
+
+      - name: Deploy website
+        run: |
+          echo "Deploying..."
+          # Add your actual deployment command here (e.g., rsync, FTP, cloud CLI)
+          # Example: rsync -avz ./dist/ user@server:/path/to/deploy
+
   report:
-    needs: [lint,deploy]
+    needs: [lint, deploy]
     if: failure()
     runs-on: ubuntu-latest
     steps:
-      - name: output information
+      - name: Output error information
         run: |
-          echo "Something went wrong"
-          echo "${{github}}"
+          echo "❌ Something went wrong during deployment!"
+          echo "GitHub Event: ${{ toJson(github) }}"
+
+      - name: Notify via Slack (Optional)
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_MESSAGE: "Deployment failed! Check GitHub Actions logs for details."
+          SLACK_USERNAME: "GitHub Actions"
